# d2l

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml  pr-agent.yml
08_Modern_Convolutional_Neural_Networks/: alex_net.py  config.py  googlenet.py  nin.py  resnet.py  train_model.py  utils.py  vgg.py
ch_07_Convolutional_Neural_Network/: cnn.py  modules.py
ch_08_Modern_Convolutional_Neural_Networks/: alex_net.py  config.py  dense_net.py  googlenet.py  nin.py  resnet.py  resnext.py  train_model.py  utils.py  vgg.py
ch_09_Recurrent_Neural_Networks/: sine_timeseries.py
tests/: conftest.py  test_ch07.py  test_ch08.py
