[project]
name = "d2l_ex"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "wandb",
    "matplotlib",
    "torchvision"
]


# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true

