[project]
name = "d2l_ex"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "wandb",
    "matplotlib",
    "torchvision",
]
[project.optional-dependencies]
dev = [
    "ruff==0.15.12",
    "mypy",
    "pytest",
    "pre-commit",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ch*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true

warn_unreachable = true
warn_redundant_casts = true
strict_equality = true
disallow_any_generics = false
disallow_incomplete_defs = true